tests/resource/valid/class/assign_to_nullable_field.mamba
class MyServer()
    def _message: String? := None

    def send(self, x: String) =>
        self._message := x
